# neonfall

./: .gitignore  .mcp.json  CMakeLists.txt  README.md
assets/: parts.json
src/: batch.c  city.c  city.h  fx.c  fx.h  game.c  gl.h  main.c  neonfall.h  platform_desktop.c  platform_vita.c  render.c  skel.c  skel.h  world.c  world.h
tools/: grade.py  ingest.py  pixellab.py  unitypackage.py
